--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <script src="js/kinetic-v4.4.3.min.js"></script>
-  <script defer="defer" src="js/pong.js"></script>
+  <script defer="defer" src="js/pong.min.js"></script>
 </head>
 <body>
   <style>
