--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html>
 <head>
   <meta charset="UTF-8">
-  <script src="/js/kinetic-v4.4.3.min.js"></script>
-  <script defer="defer" src="/js/pong.js"></script>
+  <script src="js/kinetic-v4.4.3.min.js"></script>
+  <script defer="defer" src="js/pong.js"></script>
 </head>
 <body>
   <style>
