--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <script src="js/kinetic-v4.4.3.min.js"></script>
   <script defer="defer" src="js/pong.js"></script>
+  <title>Pong.js</title>
 </head>
 <body>
   <style>
@@ -12,7 +13,12 @@
       height:400px;
       width:600px;
     }
+
+    .title {
+      font-family: sans-serif;
+    }
   </style>
+  <h1 class="title">Pong.js</h1>
   <div id="container"></div>
 </body>
 </html>
